add test configuration file

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 
 #user  nobody;
-worker_processes  8;
+worker_processes  1;
 
 #error_log  logs/error.log;
 #error_log  logs/error.log  notice;
@@ -27,16 +27,20 @@ http {
     }
 
     upstream bar {
-        server 127.0.0.2;
+        server 127.0.0.1:12085;
+	#check interval=3 rise=2 fall=5 timeout=1000 type=http;
+        #check_http_send "HEAD / HTTP/1.0\r\n\r\n";
+        #check_http_expect_alive http_2xx http_3xx;
+#        server 127.0.0.1:12086;
     }
 
 
     include       mime.types;
     default_type  application/octet-stream;
 
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
     #access_log  logs/access.log  main;
 
@@ -175,22 +179,22 @@ location = /upstreams {
 			local max_fails = 10
 			local fail_timeout = 10
 
-			for key, val in pairs(args) do
-                		if type(val) == "table" then
-                    			ngx.say(key, ": ", table.concat(val, ", "))
-					upstream_name = val
-                		else
-                    			ngx.say(key, ": ", val)
-					upstream_name = val
-            			end	
-			end
+			--for key, val in pairs(args) do
+                		--if type(val) == "table" then
+                    			--ngx.say(key, ": ", table.concat(val, ", "))
+					--upstream_name = val
+                		--else
+                    			--ngx.say(key, ": ", val)
+					--upstream_name = val
+            			--end	
+			--end
 
-                    	ngx.say("upstream ", ":", upstream_name )
-			ngx.say("server ", ":", server_ip..":"..server_port)
+                    	--ngx.say("upstream ", ":", upstream_name )
+			--ngx.say("server ", ":", server_ip..":"..server_port)
 		
 			local err = add_server("bar",server_ip..":"..server_port,weight,max_fails,fail_timeout)
-			ngx.print(err)
-			ngx.print("\\n----------------------------\\n")
+			--ngx.print(err)
+			--ngx.print("\\n----------------------------\\n")
 
                     	local srvs, err = get_servers(upstream_name)
                     	if not srvs then
@@ -218,14 +222,39 @@ location = /upstreams {
 
 		';
 	}
+	location /get_primary_peers {
+            	default_type text/plain;
+            	content_by_lua '
+				
+		local upstream = require "ngx.upstream"
+            	local ljson = require "ljson"
+            	us = upstream.get_upstreams()
+            	for _, u in ipairs(us) do
+                	local peers, err = upstream.get_primary_peers(u)
+                	if not peers then
+                    		ngx.say("failed to get peers: ", err)
+                    		return
+                	end
+                	ngx.say(ljson.encode(peers))
+            	end
+		';
+	}
 	
         #charset koi8-r;
 
-        #access_log  logs/host.access.log  main;
+        access_log  logs/1080.host.access.log  main;
+	location /status {
+            check_status;
+
+            access_log   off;
+            #allow SOME.IP.ADD.RESS;
+            #deny all;
+        }
 
         location / {
-            root   html;
-            index  index.html index.htm;
+		proxy_pass http://bar;
+            #root   html;
+            #index  index.html index.htm;
         }
 
         #error_page  404              /404.html;
