--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 sudo: required
 dist: focal
 
+branches:
+  only:
+    - "master"
+
 os: linux
 
 language: c
@@ -36,7 +40,7 @@ env:
     - NGX_BUILD_JOBS=$JOBS
   matrix:
     - NGINX_VERSION=1.21.4
-    - NGINX_VERSION=1.25.1
+    - NGINX_VERSION=1.25.3
 
 services:
  - redis-server
