travis: minor tweaks.

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,8 +46,8 @@ services:
  - redis-server
 
 install:
-  - git clone https://github.com/openresty/ngx_http_redis.git
   - git clone https://github.com/openresty/nginx-devel-utils.git
+  - git clone https://github.com/openresty/ngx_http_redis.git ../ngx_http_redis
   - git clone https://github.com/openresty/openresty.git ../openresty
   - git clone https://github.com/openresty/no-pool-nginx.git ../no-pool-nginx
   - git clone https://github.com/simpl/ngx_devel_kit.git ../ndk-nginx-module
